Android - Simplificando classe 3270